Fixed border radius and spacing on cards

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ justify-content: flex-end;
   justify-content: center;
   border-bottom: solid 2px black;
   background-color: darkgray;
+  padding-bottom: 30vh;
 }
 
 .flex-end {
@@ -65,3 +66,21 @@ footer {
   background-color: rgb(99, 71, 226);
 }
 
+.absolute {
+  position: absolute;
+  background-color: white;
+  border: solid 1px black;
+  border-radius: 2em;
+}
+
+.relative {
+  position: relative;
+  top: 5vh;
+}
+
+.bg-gray{
+  display: flex;
+  justify-content: center;
+  border-bottom: solid 2px black;
+  background-color: darkgray;
+}
